# fake_cuda_available_pytorch

./: README.md  pip.conf  pyproject.toml
src/subpakage/: __init__.py
src/torch/: __init__.py  __main__.py  hook_torch.py  test.py  torch.py
tests/: test_fake_cuda.py  tests_main.py
